[diagrams] Global refactoring of Show Diagram Action and Java UML data model
GitOrigin-RevId: fd39b7757ebc200606f0da980a8edda8427ecd7a